@@ -1,21 +1,21 @@
 package net.nemezanevem.gregtech.api.gui.widgets;
 
 import com.google.common.base.Preconditions;
-import gregtech.api.gui.GuiTextures;
-import gregtech.api.gui.IRenderContext;
-import gregtech.api.gui.Widget;
-import gregtech.api.gui.resources.SizedTextureArea;
-import gregtech.api.gui.resources.TextureArea;
-import gregtech.api.util.Position;
-import gregtech.api.util.Size;
+import com.mojang.blaze3d.vertex.PoseStack;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.FontRenderer;
-import net.minecraft.client.resources.I18n;
-import net.minecraft.item.ItemStack;
-import net.minecraft.network.PacketBuffer;
-import org.lwjgl.input.Mouse;
+import net.minecraft.client.gui.Font;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.ItemStack;
+import net.nemezanevem.gregtech.api.gui.GuiTextures;
+import net.nemezanevem.gregtech.api.gui.IRenderContext;
+import net.nemezanevem.gregtech.api.gui.Widget;
+import net.nemezanevem.gregtech.api.gui.resources.SizedTextureArea;
+import net.nemezanevem.gregtech.api.gui.resources.TextureArea;
+import net.nemezanevem.gregtech.api.util.Position;
+import net.nemezanevem.gregtech.api.util.Size;
+import net.nemezanevem.gregtech.client.util.MouseButtonHelper;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -25,7 +25,7 @@ public class ClickButtonWidget extends Widget {
     protected TextureArea buttonTexture = GuiTextures.VANILLA_BUTTON.getSubArea(0.0, 0.0, 1.0, 0.5);
     protected final String displayText;
     protected int textColor = 0xFFFFFF;
-    protected final Consumer<ClickData> onPressCallback;
+    protected final Consumer<Widget.ClickData> onPressCallback;
     protected boolean shouldClientCallback;
     protected Supplier<Boolean> shouldDisplay;
 
@@ -77,29 +77,29 @@ public class ClickButtonWidget extends Widget {
     }
 
     @Override
-    public void drawInBackground(int mouseX, int mouseY, float partialTicks, IRenderContext context) {
-        super.drawInBackground(mouseX, mouseY, partialTicks, context);
+    public void drawInBackground(PoseStack poseStack, int mouseX, int mouseY, float partialTicks, IRenderContext context) {
+        super.drawInBackground(poseStack, mouseX, mouseY, partialTicks, context);
         if (!shouldDisplay.get()) return;
         Position position = getPosition();
         Size size = getSize();
         if (buttonTexture instanceof SizedTextureArea) {
             ((SizedTextureArea) buttonTexture).drawHorizontalCutSubArea(position.x, position.y, size.width, size.height, 0.0, 1.0);
         } else {
-            buttonTexture.drawSubArea(position.x, position.y, size.width, size.height, 0.0, 0.0, 1.0, 1.0);
+            buttonTexture.drawSubArea(position.x, position.y, size.width, size.height, 0.0f, 0.0f, 1.0f, 1.0f);
         }
-        FontRenderer fontRenderer = Minecraft.getMinecraft().fontRenderer;
-        String text = I18n.format(displayText);
-        fontRenderer.drawString(text,
-                position.x + size.width / 2 - fontRenderer.getStringWidth(text) / 2,
-                position.y + size.height / 2 - fontRenderer.FONT_HEIGHT / 2, textColor);
+        Font fontRenderer = Minecraft.getInstance().font;
+        Component text = Component.translatable(displayText);
+        fontRenderer.draw(poseStack, text,
+                position.x + size.width / 2f - fontRenderer.width(text) / 2f,
+                position.y + size.height / 2f - fontRenderer.lineHeight / 2f, textColor);
     }
 
     @Override
-    public void drawInForeground(int mouseX, int mouseY) {
-        super.drawInForeground(mouseX, mouseY);
+    public void drawInForeground(PoseStack poseStack, int mouseX, int mouseY) {
+        super.drawInForeground(poseStack, mouseX, mouseY);
         if (tooltipText != null && isMouseOverElement(mouseX, mouseY)) {
-            List<String> hoverList = Arrays.asList(I18n.format(tooltipText, tooltipArgs).split("/n"));
-            drawHoveringText(ItemStack.EMPTY, hoverList, 300, mouseX, mouseY);
+            List<Component> hoverList = List.of(Component.translatable(tooltipText, tooltipArgs));
+            drawHoveringText(poseStack, ItemStack.EMPTY, hoverList, 300, mouseX, mouseY);
         }
     }
 
@@ -114,16 +114,16 @@ public class ClickButtonWidget extends Widget {
     }
 
     protected void triggerButton() {
-        ClickData clickData = new ClickData(Mouse.getEventButton(), isShiftDown(), isCtrlDown());
+        ClickData clickData = new ClickData(MouseButtonHelper.button, isShiftDown(), isCtrlDown());
         writeClientAction(1, clickData::writeToBuf);
         if (shouldClientCallback) {
-           onPressCallback.accept(new ClickData(Mouse.getEventButton(), isShiftDown(), isCtrlDown(), true));
+           onPressCallback.accept(new ClickData(MouseButtonHelper.button, isShiftDown(), isCtrlDown(), true));
         }
         playButtonClickSound();
     }
 
     @Override
-    public void handleClientAction(int id, PacketBuffer buffer) {
+    public void handleClientAction(int id, FriendlyByteBuf buffer) {
         super.handleClientAction(id, buffer);
         if (id == 1) {
             ClickData clickData = ClickData.readFromBuf(buffer);
